--- a/package.json
+++ b/package.json
@@ -14,11 +14,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^12.20.19",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,10 +21,14 @@
     "react-svg": "^14.0.8",
     "sass": "^1.37.5",
     "typescript": "^4.3.5",
-    "use-breakpoint": "^2.0.1",
-    "web-vitals": "^1.1.2"
+    "use-breakpoint": "^2.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^12.20.19",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
