--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pscroll",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -11,17 +11,20 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
-    "react-svg": "^14.0.8",
-    "sass": "^1.37.5",
+    "react-svg": "^15.1.7",
+    "redux": "^4.2.0",
+    "sass": "^1.54.5",
     "typescript": "^4.3.5",
-    "use-breakpoint": "^2.0.1"
+    "use-breakpoint": "^3.0.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
